src/wrapper_refcounted/torch_refcounted_api_generated.h

value atg_linalg_pinv(value self, double rcond, int hermitian);
value atg_linalg_pinv_atol_rtol_float(value self, value atol, value rtol, int hermitian);
value atg_linalg_pinv_atol_rtol_float_out(value out, value self, value atol, value rtol, int hermitian);
value atg_linalg_pinv_atol_rtol_tensor(value self, value atol, value rtol, int hermitian);
value atg_linalg_pinv_atol_rtol_tensor_out(value out, value self, value atol, value rtol, int hermitian);
value atg_linalg_pinv_out(value out, value self, double rcond, int hermitian);
value atg_linalg_pinv_out_rcond_tensor(value out, value self, value rcond, int hermitian);
value atg_linalg_pinv_rcond_tensor(value self, value rcond, int hermitian);
value atg_linalg_qr(value A, const char * mode);
value atg_linalg_qr_out(value Q, value R, value A, const char * mode);
value atg_linalg_slogdet(value A);
value atg_linalg_slogdet_out(value sign, value logabsdet, value A);
value atg_linalg_solve(value A, value B, int left);
value atg_linalg_solve_ex(value A, value B, int left, int check_errors);
value atg_linalg_solve_ex_out(value result, value info, value A, value B, int left, int check_errors);
value atg_linalg_solve_out(value out, value A, value B, int left);
value atg_linalg_solve_triangular(value self, value B, int upper, int left, int unitriangular);
value atg_linalg_solve_triangular_out(value out, value self, value B, int upper, int left, int unitriangular);
value atg_linalg_svd(value A, int full_matrices, value driver);
value atg_linalg_svd_u(value U, value S, value Vh, value A, int full_matrices, value driver);
value atg_linalg_svdvals(value A, value driver);
value atg_linalg_svdvals_out(value out, value A, value driver);
value atg_linalg_tensorinv(value self, int64_t ind);
value atg_linalg_tensorinv_out(value out, value self, int64_t ind);
value atg_linalg_tensorsolve(value self, value other, value dims);
value atg_linalg_tensorsolve_out(value out, value self, value other, value dims);
value atg_linalg_vander(value x, value n);
value atg_linalg_vecdot(value x, value y, int64_t dim);
value atg_linalg_vecdot_out(value out, value x, value y, int64_t dim);
value atg_linear(value input, value weight, value bias);
value atg_linear_out(value out, value input, value weight, value bias);
value atg_linspace(value start, value end, int64_t steps, int options_kind, int options_device);
value atg_linspace_out(value out, value start, value end, int64_t steps);
value atg_linspace_scalar_tensor(value start, value end, int64_t steps, int options_kind, int options_device);
value atg_linspace_scalar_tensor_out(value out, value start, value end, int64_t steps);
value atg_linspace_tensor_scalar(value start, value end, int64_t steps, int options_kind, int options_device);
value atg_linspace_tensor_scalar_out(value out, value start, value end, int64_t steps);
value atg_linspace_tensor_tensor(value start, value end, int64_t steps, int options_kind, int options_device);
value atg_linspace_tensor_tensor_out(value out, value start, value end, int64_t steps);
value atg_log(value self);
value atg_log10(value self);
value atg_log10_(value self);
value atg_log10_out(value out, value self);
value atg_log1p(value self);
value atg_log1p_(value self);
value atg_log1p_out(value out, value self);
value atg_log2(value self);
value atg_log2_(value self);
value atg_log2_out(value out, value self);
value atg_log_(value self);
value atg_log_normal(value self, double mean, double std);
value atg_log_normal_(value self, double mean, double std);
value atg_log_normal_out(value out, value self, double mean, double std);
value atg_log_out(value out, value self);
value atg_log_sigmoid(value self);
value atg_log_sigmoid_backward(value grad_output, value self, value buffer);
value atg_log_sigmoid_backward_grad_input(value grad_input, value grad_output, value self, value buffer);
value atg_log_sigmoid_out(value out, value self);
value atg_log_softmax(value self, int64_t dim, int dtype);
value atg_log_softmax_int_out(value out, value self, int64_t dim, int dtype);
value atg_logaddexp(value self, value other);
value atg_logaddexp2(value self, value other);
value atg_logaddexp2_out(value out, value self, value other);
value atg_logaddexp_out(value out, value self, value other);
value atg_logcumsumexp(value self, int64_t dim);
value atg_logcumsumexp_out(value out, value self, int64_t dim);
value atg_logdet(value self);
value atg_logical_and(value self, value other);
value atg_logical_and_(value self, value other);
value atg_logical_and_out(value out, value self, value other);
value atg_logical_not(value self);
value atg_logical_not_(value self);
value atg_logical_not_out(value out, value self);
value atg_logical_or(value self, value other);
value atg_logical_or_(value self, value other);
value atg_logical_or_out(value out, value self, value other);
value atg_logical_xor(value self, value other);
value atg_logical_xor_(value self, value other);
value atg_logical_xor_out(value out, value self, value other);
value atg_logit(value self, value eps);
value atg_logit_(value self, value eps);
value atg_logit_backward(value grad_output, value self, value eps);
value atg_logit_backward_grad_input(value grad_input, value grad_output, value self, value eps);
value atg_logit_out(value out, value self, value eps);