src/bindings/torch_bindings_generated4.ml


  let stubs_linalg_pinv =
    foreign "atg_linalg_pinv" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_pinv_atol_rtol_float =
    foreign
      "atg_linalg_pinv_atol_rtol_float"
      (gc_tensor @-> double @-> int @-> double @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_pinv_atol_rtol_float_out =
    foreign
      "atg_linalg_pinv_atol_rtol_float_out"
      (gc_tensor
       @-> gc_tensor
       @-> double
       @-> int
       @-> double
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_linalg_pinv_atol_rtol_tensor =
    foreign
      "atg_linalg_pinv_atol_rtol_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_pinv_atol_rtol_tensor_out =
    foreign
      "atg_linalg_pinv_atol_rtol_tensor_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_linalg_pinv_out =
    foreign
      "atg_linalg_pinv_out"
      (gc_tensor @-> gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_pinv_out_rcond_tensor =
    foreign
      "atg_linalg_pinv_out_rcond_tensor"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_pinv_rcond_tensor =
    foreign
      "atg_linalg_pinv_rcond_tensor"
      (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_qr =
    foreign "atg_linalg_qr" (ptr raw_tensor @-> gc_tensor @-> string @-> returning void)
  ;;

  let stubs_linalg_qr_out =
    foreign
      "atg_linalg_qr_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> string
       @-> returning void)
  ;;

  let stubs_linalg_slogdet =
    foreign "atg_linalg_slogdet" (ptr raw_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_linalg_slogdet_out =
    foreign
      "atg_linalg_slogdet_out"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning void)
  ;;

  let stubs_linalg_solve =
    foreign "atg_linalg_solve" (gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_solve_ex =
    foreign
      "atg_linalg_solve_ex"
      (ptr raw_tensor @-> gc_tensor @-> gc_tensor @-> int @-> int @-> returning void)
  ;;

  let stubs_linalg_solve_ex_out =
    foreign
      "atg_linalg_solve_ex_out"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> returning void)
  ;;

  let stubs_linalg_solve_out =
    foreign
      "atg_linalg_solve_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_solve_triangular =
    foreign
      "atg_linalg_solve_triangular"
      (gc_tensor @-> gc_tensor @-> int @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_solve_triangular_out =
    foreign
      "atg_linalg_solve_triangular_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> int
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_linalg_svd =
    foreign
      "atg_linalg_svd"
      (ptr raw_tensor @-> gc_tensor @-> int @-> string @-> int @-> returning void)
  ;;

  let stubs_linalg_svd_u =
    foreign
      "atg_linalg_svd_u"
      (ptr raw_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> int
       @-> string
       @-> int
       @-> returning void)
  ;;

  let stubs_linalg_svdvals =
    foreign "atg_linalg_svdvals" (gc_tensor @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_svdvals_out =
    foreign
      "atg_linalg_svdvals_out"
      (gc_tensor @-> gc_tensor @-> string @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_tensorinv =
    foreign "atg_linalg_tensorinv" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linalg_tensorinv_out =
    foreign
      "atg_linalg_tensorinv_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linalg_tensorsolve =
    foreign
      "atg_linalg_tensorsolve"
      (gc_tensor @-> gc_tensor @-> ptr int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_tensorsolve_out =
    foreign
      "atg_linalg_tensorsolve_out"
      (gc_tensor
       @-> gc_tensor
       @-> gc_tensor
       @-> ptr int64_t
       @-> int
       @-> returning raw_tensor)
  ;;

  let stubs_linalg_vander =
    foreign "atg_linalg_vander" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_linalg_vecdot =
    foreign
      "atg_linalg_vecdot"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linalg_vecdot_out =
    foreign
      "atg_linalg_vecdot_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linear =
    foreign "atg_linear" (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linear_out =
    foreign
      "atg_linear_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_linspace =
    foreign
      "atg_linspace"
      (scalar @-> scalar @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;
end

module C2 (F : Cstubs.FOREIGN) = struct
  open F
  open Type_defs

  let stubs_linspace_out =
    foreign
      "atg_linspace_out"
      (gc_tensor @-> scalar @-> scalar @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linspace_scalar_tensor =
    foreign
      "atg_linspace_scalar_tensor"
      (scalar @-> gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_linspace_scalar_tensor_out =
    foreign
      "atg_linspace_scalar_tensor_out"
      (gc_tensor @-> scalar @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linspace_tensor_scalar =
    foreign
      "atg_linspace_tensor_scalar"
      (gc_tensor @-> scalar @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_linspace_tensor_scalar_out =
    foreign
      "atg_linspace_tensor_scalar_out"
      (gc_tensor @-> gc_tensor @-> scalar @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_linspace_tensor_tensor =
    foreign
      "atg_linspace_tensor_tensor"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> int @-> returning raw_tensor)
  ;;

  let stubs_linspace_tensor_tensor_out =
    foreign
      "atg_linspace_tensor_tensor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_log = foreign "atg_log" (gc_tensor @-> returning raw_tensor)
  let stubs_log10 = foreign "atg_log10" (gc_tensor @-> returning raw_tensor)
  let stubs_log10_ = foreign "atg_log10_" (gc_tensor @-> returning raw_tensor)

  let stubs_log10_out =
    foreign "atg_log10_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_log1p = foreign "atg_log1p" (gc_tensor @-> returning raw_tensor)
  let stubs_log1p_ = foreign "atg_log1p_" (gc_tensor @-> returning raw_tensor)

  let stubs_log1p_out =
    foreign "atg_log1p_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_log2 = foreign "atg_log2" (gc_tensor @-> returning raw_tensor)
  let stubs_log2_ = foreign "atg_log2_" (gc_tensor @-> returning raw_tensor)

  let stubs_log2_out =
    foreign "atg_log2_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_log_ = foreign "atg_log_" (gc_tensor @-> returning raw_tensor)

  let stubs_log_normal =
    foreign "atg_log_normal" (gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_log_normal_ =
    foreign "atg_log_normal_" (gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_log_normal_out =
    foreign
      "atg_log_normal_out"
      (gc_tensor @-> gc_tensor @-> double @-> double @-> returning raw_tensor)
  ;;

  let stubs_log_out =
    foreign "atg_log_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_log_sigmoid = foreign "atg_log_sigmoid" (gc_tensor @-> returning raw_tensor)

  let stubs_log_sigmoid_backward =
    foreign
      "atg_log_sigmoid_backward"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_log_sigmoid_backward_grad_input =
    foreign
      "atg_log_sigmoid_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_log_sigmoid_out =
    foreign "atg_log_sigmoid_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_log_softmax =
    foreign "atg_log_softmax" (gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_log_softmax_int_out =
    foreign
      "atg_log_softmax_int_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> int @-> returning raw_tensor)
  ;;

  let stubs_logaddexp =
    foreign "atg_logaddexp" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logaddexp2 =
    foreign "atg_logaddexp2" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logaddexp2_out =
    foreign
      "atg_logaddexp2_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logaddexp_out =
    foreign
      "atg_logaddexp_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logcumsumexp =
    foreign "atg_logcumsumexp" (gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_logcumsumexp_out =
    foreign
      "atg_logcumsumexp_out"
      (gc_tensor @-> gc_tensor @-> int64_t @-> returning raw_tensor)
  ;;

  let stubs_logdet = foreign "atg_logdet" (gc_tensor @-> returning raw_tensor)

  let stubs_logical_and =
    foreign "atg_logical_and" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_and_ =
    foreign "atg_logical_and_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_and_out =
    foreign
      "atg_logical_and_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_not = foreign "atg_logical_not" (gc_tensor @-> returning raw_tensor)
  let stubs_logical_not_ = foreign "atg_logical_not_" (gc_tensor @-> returning raw_tensor)

  let stubs_logical_not_out =
    foreign "atg_logical_not_out" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_or =
    foreign "atg_logical_or" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_or_ =
    foreign "atg_logical_or_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_or_out =
    foreign
      "atg_logical_or_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_xor =
    foreign "atg_logical_xor" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_xor_ =
    foreign "atg_logical_xor_" (gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logical_xor_out =
    foreign
      "atg_logical_xor_out"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> returning raw_tensor)
  ;;

  let stubs_logit =
    foreign "atg_logit" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_logit_ =
    foreign "atg_logit_" (gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_logit_backward =
    foreign
      "atg_logit_backward"
      (gc_tensor @-> gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_logit_backward_grad_input =
    foreign
      "atg_logit_backward_grad_input"
      (gc_tensor @-> gc_tensor @-> gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;

  let stubs_logit_out =
    foreign
      "atg_logit_out"
      (gc_tensor @-> gc_tensor @-> double @-> int @-> returning raw_tensor)
  ;;
